Fix vertical alignment for goto-page in IE

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -94,6 +94,7 @@ body {
             width: 100px;
             #goto-page {
                 input {
+                    line-height: 25px;
                     .border-radius(4px);
                     border: 1px solid @medium-grey;
                     width: 50px;
